video recording date time fix